--- a/mini_project_report_ael.html
+++ b/mini_project_report_ael.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Code Spy</title>
+  <title>Mini Project Report Of Applied Electronics</title>
       <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <!--boootstrap css-->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- custom css file link  -->
-    <link rel="stylesheet" href="/ccss.css">
+    <link rel="stylesheet" href="/Project_Report/ccss.css">
         <link rel="stylesheet" href="/prism.css">
 </head>
 <style type="text/css" media="all">
@@ -164,7 +164,7 @@
 <!--bootstrap-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <!-- custom js file link  -->
-<script src="/cjs.js"></script>
+<script src="/Project_Report/cjs.js"></script>
 <script src="/prism.js"></script>
 </body>
 
