--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <br>
   <big><b>CIRCUIT DIAGRAM:</b></big>
   <figure class="figure">
-  <img src="/img1.png" class="figure-img img-fluid rounded" alt="">
+  <img src="/Project_Report/img1.png" class="figure-img img-fluid rounded" alt="">
   <figcaption class=""></figcaption>
 </figure><br>
   <p class="para"></p><br>
@@ -69,7 +69,7 @@
   <big><b>PCB LAYOUT:</b></big>
   <p>
    <figure class="figure">
-  <img src="/img2.png" class="figure-img img-fluid rounded" alt="">
+  <img src="/Project_Report/img2.png" class="figure-img img-fluid rounded" alt="">
   <figcaption class=""></figcaption>
 </figure><br> 
   </p><br>
