--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
  <header>
      <div id="menu" class="fas fa-bars"></div>
      <nav class="pnavbar">
-       <a href="/index.html">Switch to pdf</a>
+       <a href="https://drive.google.com/file/d/1ZoW2ou6AfWo4w-lg35spNrOOt2m-SOTN/view?usp=drivesdk">Switch to pdf</a>
      </nav>
      <div id="theme-toggler" class="fas fa-moon"></div>
    </header>
