--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <i>Project Title: </i><br>
 <big>CLAP SWITCH CIRCUIT USING TRANSISTOR</big><p></p>
 <b>Government Polytechnic Hingoli</b><br><big>EJ3I</big><br>
-<br><b>Department Of  Electronics And Communication Engineering</b>
+<br><i>Department Of  Electronics And Communication Engineering</i>
 <br><hr><br>
 
 </div>
@@ -55,7 +55,7 @@
   <br>
   <big><b>CIRCUIT DIAGRAM:</b></big>
   <figure class="figure">
-  <img src="/Project_Report/img1.png" class="figure-img img-fluid rounded" alt="">
+  <img src="/Project_Report/img3.png" class="figure-img img-fluid rounded" alt="">
   <figcaption class=""></figcaption>
 </figure><br>
   <p class="para"></p><br>
@@ -119,7 +119,7 @@
         </tr>
         <tr>
         <td>2</td>
-            <td>Resistor 120k, 10k , 1k , 220 Ω</td>
+            <td>Resistor 120k, 10k , 1km , 220 Ω</td>
             <td>4</td>
             <td>20<i>RS~</i> </td>
         </tr>
